tests/NormalTests/paczka2/big_fuzzy/56944207.err
Error in line 1: DsU S713 67,5
Error in line 7: S753 S284 17,0
Error in line 10: S753 S713 10,9
Error in line 8: EAz S284 53,1
Error in line 35: S753 S284 -1,7
Error in line 23: EAz S713 34,2
Error in line 42: 9dPWMxaInI S753 34,2
Error in line 62: DsU S713 55,1
Error in line 64: S753 S933 94,8
Error in line 65: 9dPWMxaInI S933 22,4
Error in line 90: jmFpKn6AUs S713 46,8
Error in line 93: EAz S713 189,1
Error in line 96: jmFpKn6AUs S284 80,5
Error in line 106: 9dPWMxaInI S284 29,8
Error in line 98: S753 S753 21,3
Error in line 124: EAz S753 20,6
Error in line 139: 0E0dP4gzA S753 53,5
Error in line 177: S753 S933 80,37
Error in line 182: EAz S284 26,9
Error in line 197: EAz S933 88,6
Error in line 193: jmFpKn6AUs S713 154,0
Error in line 198: EAz S753 7,5
Error in line 191: gdzDdiVsEVG S753 49,5
Error in line 214: gdzDdiVsEVG S933 5,2
Error in line 218: 0E0dP4gzA S284 39,9
Error in line 222: 0E0dP4gzA S713 76,9
Error in line 224: 0E0dP4gzA S753 99,8
Error in line 226: gdzDdiVsEVG S933 43,7
Error in line 230: gdzDdiVsEVG S713 61,4
Error in line 233: 0E0dP4gzA S713 8,8
Error in line 247: DsU S933 99,0
